--- a/cinema/app/src/main/res/layout/fragment_cartelera.xml
+++ b/cinema/app/src/main/res/layout/fragment_cartelera.xml
@@ -41,15 +41,15 @@
                 android:src="@drawable/ubicacion_36x36"
                 android:layout_gravity="center_vertical"/>
 
-            <TextView
+            <Button
+                android:id="@+id/botonUbicacion"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="3dp"
                 android:fontFamily="sans-serif-black"
                 android:text="Cd. Obregón, Sonora, Mex."
-                android:textColor="@color/white"
-                android:textSize="14sp" />
+                android:textColor="@color/white" />
 
         </LinearLayout>
 
