--- a/cinema/app/src/main/res/layout/fragment_cines.xml
+++ b/cinema/app/src/main/res/layout/fragment_cines.xml
@@ -34,37 +34,22 @@
         android:orientation="horizontal"
         android:background="@color/almostblack"
         >
-
-        <ImageButton
-            android:id="@+id/boton_ubicacion"
-            android:layout_width="232dp"
-            android:layout_height="43dp"
+        <Button
+            android:id="@+id/botonUbicacion"
+            android:layout_width="204dp"
+            android:layout_height="42dp"
             android:layout_row="0"
             android:layout_column="0"
+            android:layout_marginLeft="5dp"
             android:background="@drawable/roundedbutton"
-            android:backgroundTint="@color/editTextGray"
-            android:text="Cd. Obregón, Sonora, Méx."
+            android:backgroundTint="@color/Fondo"
+            android:paddingLeft="25dp"
+            android:text="Ciudad Obregon Sonora, Mex"
+            android:textAllCaps="false"
             android:textColor="@color/white"
             android:textFontWeight="400"
-            android:textSize="11sp"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_row="0"
-            android:layout_column="0"
-            android:layout_marginLeft="50dp"
-            android:layout_marginTop="14dp"
-            android:text="Cd. Obregón, Sonora, Mex."
-            android:textColor="@color/white"
-            android:textSize="12sp" />
-        <ImageView
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_row="0"
-            android:layout_column="0"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="10dp"
-            android:src="@drawable/ubicacion_36x36" />
+            android:textSize="11sp" />
+
         <ImageButton
             android:id="@+id/buscar"
             android:layout_width="38dp"
@@ -84,8 +69,18 @@
             android:layout_column="2"
             android:layout_marginLeft="15dp"
             android:background="@color/Banner"
-            android:src="@drawable/filtros_36x36"
-            />
+            android:src="@drawable/filtros_36x36" />
+
+        <ImageView
+            android:id="@+id/imageView9"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_row="0"
+            android:layout_column="0"
+            android:src="@drawable/ubicacion_36x36"
+            android:translationZ="3dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="20dp"/>
     </GridLayout>
             <LinearLayout
                 android:layout_width="wrap_content"
