--- a/cinema/app/src/main/res/layout/fragment_inicio.xml
+++ b/cinema/app/src/main/res/layout/fragment_inicio.xml
@@ -20,14 +20,27 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/logoreel" />
 
+    <ImageView
+        android:id="@+id/imageView9"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="120dp"
+        android:layout_marginTop="12dp"
+        android:src="@drawable/ubicacion_36x36"
+        android:translationZ="3dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
     <Button
         android:id="@+id/boton_ubicacion"
-        android:layout_width="232dp"
-        android:layout_height="43dp"
-        android:layout_marginTop="4dp"
+        android:layout_width="204dp"
+        android:layout_height="42dp"
         android:background="@drawable/roundedbutton"
         android:backgroundTint="@color/Fondo"
-        android:text="Ciudad Obregon Sonora, mex"
+        android:paddingLeft="25dp"
+        android:text="Ciudad Obregon Sonora, Mex"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
         android:textFontWeight="400"
         android:textSize="11sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,8 +52,8 @@
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="144dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="134dp"
+        app:layout_constraintTop_toBottomOf="@+id/boton_ubicacion"
         tools:layout_editor_absoluteX="1dp">
 
         <LinearLayout
@@ -53,7 +66,6 @@
                 android:id="@+id/carouselRecyclerview"
                 android:layout_width="411dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="30dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.494"
                 app:layout_constraintStart_toStartOf="parent"
@@ -63,10 +75,13 @@
                 android:id="@+id/textView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
+                android:layout_marginLeft="5dp"
+                android:paddingLeft="10dp"
+                android:paddingTop="10dp"
+                android:paddingRight="10dp"
                 android:text="Promociones cerca de ti"
                 android:textColor="@color/white"
-                android:textFontWeight="600"
+                android:textFontWeight="900"
                 android:textSize="25dp"
                 tools:layout_editor_absoluteX="69dp"
                 tools:layout_editor_absoluteY="94dp" />
@@ -83,7 +98,6 @@
                 android:layout_height="164dp"
                 android:padding="10dp"
                 app:srcCompat="@drawable/precioespecial1" />
-
 
             <ImageView
                 android:layout_width="match_parent"
