--- a/cinema/app/src/main/res/layout/detalles_pelicula.xml
+++ b/cinema/app/src/main/res/layout/detalles_pelicula.xml
@@ -39,6 +39,9 @@
         android:layout_height="match_parent"
         android:fillViewport="true"
         android:layout_marginTop="1dp">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <ImageButton
         android:layout_width="30dp"
@@ -279,5 +282,6 @@
             android:textStyle="bold" />
 
     </LinearLayout>
+</LinearLayout>
     </ScrollView>
 </LinearLayout>
